[project]
name = "angivelse-af-borgers-primaere-organisationer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client",
    "kmd-nexus-client",
    "odk-tools",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[tool.uv.sources]
kmd-nexus-client = { git = "https://github.com/odense-rpa/nexus-client.git", branch="main" }
odk-tools = { git = "https://github.com/odense-rpa/odk-tools.git", branch="master" }
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", rev = "54afff3c8554b39951ceceb8d63396d11838d9dd" }
